Updated the notebook with the negative pair generation added there as well.

--- a/data_process/pinder_eubacteria.ipynb
+++ b/data_process/pinder_eubacteria.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 211,
    "id": "8e372a53-282c-4c38-b24b-e96982434ada",
    "metadata": {},
    "outputs": [],
@@ -18,10 +18,14 @@
     "import pandas as pd\n",
     "import csv\n",
     "import os\n",
+    "import random\n",
     "\n",
     "UNIPROT_IDS_PATH=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/uniprot_ids_1024_512.lst\"\n",
     "UNIPROT_LINEAGES_PATH=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/uniprot_lineages_1024_512.tsv\"\n",
-    "POSITIVES_DIR=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/eubacteria_5_1024_512/\"\n",
+    "SPLITS_DIR=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/eubacteria_5_1024_512/\"\n",
+    "SEED=42\n",
+    "\n",
+    "random.seed(SEED)\n",
     "\n",
     "def get_system(system_id: str) -> PinderSystem:\n",
     "    return PinderSystem(system_id)\n",
@@ -79,12 +83,59 @@
     "        )\n",
     "    )\n",
     "    return ids\n",
+    "\n",
+    "def make_random_pairs(df, seed=SEED):    \n",
+    "    # Separate ids\n",
+    "    df[['R', 'L']] = df['pinder_id'].str.split('--', expand=True)\n",
+    "    df[['pdb_R', 'chain_R']] = df['R'].str.split('__', expand=True)\n",
+    "    df[['pdb_L', 'chain_L']] = df['L'].str.split('__', expand=True)\n",
+    "    \n",
+    "    # Group by phylum\n",
+    "    negative_ids = []\n",
+    "    negative_phyla = []\n",
+    "    orig_pinder_ids = set(df['pinder_id'])\n",
+    "    \n",
+    "    for phylum, group in df.groupby('phylum_R'):\n",
+    "        paired = []\n",
+    "        R = group['R'].tolist()\n",
+    "        L = group['L'].tolist()\n",
+    "        pdb_R = group['pdb_R'].tolist()\n",
+    "        pdb_L = group['pdb_L'].tolist()\n",
+    "        chain_L = group['chain_L'].tolist()     \n",
+    "        \n",
+    "        # Shuffle until no same PDB pairs\n",
+    "        for _ in range(100):  # Limit reattempts\n",
+    "            L_info = list(zip(L, pdb_L, chain_L))\n",
+    "            random.shuffle(L_info)\n",
+    "            L, pdb_L, chain_L = zip(*L_info)\n",
+    "            if all(p1 != p2 for p1, p2 in zip(pdb_R, pdb_L)): break\n",
+    "        \n",
+    "        paired.extend(zip(R, L))\n",
+    "        \n",
+    "        # Forming new pinder_ids\n",
+    "        paired = [\"--\".join(pair) for pair in paired]\n",
+    "        \n",
+    "        # If new pinder_id is present in the original set, remove that record\n",
+    "        paired = [item for item in paired if item not in orig_pinder_ids]\n",
+    "\n",
+    "        # Save \n",
+    "        negative_ids.extend(paired)\n",
+    "        negative_phyla.extend([phylum]*len(paired))\n",
+    "\n",
+    "    negative_records = list(zip(negative_ids, negative_phyla, negative_phyla))\n",
+    "    negative_df = pd.DataFrame(\n",
+    "        negative_records, \n",
+    "        columns=['pinder_id', 'phylum_R', 'phylum_L']\n",
+    "    ).sample(frac=1, random_state=seed).reset_index(drop=True)\n",
+    "    \n",
+    "    return negative_df\n",
+    "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 212,
    "id": "de970895-ea39-4f2b-b294-80003d7d5ebe",
    "metadata": {},
    "outputs": [
@@ -94,7 +145,7 @@
        "PosixPath('/scicore/home/schwede/durair0000/.local/share/pinder/2024-02')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 213,
    "id": "f007fc0d-da6f-4e71-bac5-7b8cface420c",
    "metadata": {},
    "outputs": [],
@@ -116,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 214,
    "id": "f82601cf-96a0-48b5-a2c0-badaccf3e11f",
    "metadata": {},
    "outputs": [
@@ -144,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 215,
    "id": "7df3af2a-b115-4ec8-8950-247b1a3de70d",
    "metadata": {},
    "outputs": [],
@@ -161,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 216,
    "id": "9ebdca60-6e15-4274-ae87-e8fdf22ef01a",
    "metadata": {},
    "outputs": [
@@ -189,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 217,
    "id": "073c00a5-62d8-4353-978b-2055d57b4dcd",
    "metadata": {},
    "outputs": [],
@@ -213,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 218,
    "id": "67c3212f-9a63-4823-bfe3-2215349b46c0",
    "metadata": {},
    "outputs": [],
@@ -233,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 219,
    "id": "284544b4-bae4-48a3-8087-f21504d0745b",
    "metadata": {},
    "outputs": [],
@@ -253,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 220,
    "id": "0bf36719-20e2-4059-941f-e34aa313d12b",
    "metadata": {},
    "outputs": [
@@ -274,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 221,
    "id": "2c897770-537a-442b-96d9-7c13bfd4984d",
    "metadata": {},
    "outputs": [],
@@ -287,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 222,
    "id": "259f3538-e7e8-4fa2-907b-aaf46d39d17c",
    "metadata": {},
    "outputs": [
@@ -309,31 +360,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 229,
    "id": "1ca0c57b-ee13-4952-87b9-bb0d5588273b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Split\tClass\tNumber of instances\n",
+      "train\t0\t8262\n",
+      "train\t1\t8262\n",
+      "val\t0\t901\n",
+      "val\t1\t901\n",
+      "test\t0\t878\n",
+      "test\t1\t878\n"
+     ]
+    }
+   ],
    "source": [
-    "# Save IDs of the positives and phyla\n",
+    "# Save IDs and phyla\n",
+    "print(f\"Split\\tClass\\tNumber of instances\")\n",
+    "\n",
     "for split in [\"train\", \"val\", \"test\"]:\n",
-    "    split_data = []\n",
+    "    split_positives = []\n",
     "    for id in eubacteria_pinder_ids[split]:\n",
-    "        split_data.append({\"pinder_id\": id, \"phylum_1\": eubacteria_pinder_phyla[id][0], \"phylum_2\": eubacteria_pinder_phyla[id][1]})\n",
-    "    with open(f\"{POSITIVES_DIR}/{split}.csv\", 'w', newline='') as csvfile:\n",
-    "        fieldnames = ['pinder_id', 'phylum_1', 'phylum_2']\n",
-    "        writer = csv.DictWriter(csvfile, fieldnames=fieldnames)\n",
-    "        writer.writeheader()\n",
-    "        writer.writerows(split_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a2190dd1-28ab-4493-b281-bfa86a201369",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Make negative pairs"
+    "        record = {\"pinder_id\": id, \"phylum_R\": eubacteria_pinder_phyla[id][0], \"phylum_L\": eubacteria_pinder_phyla[id][1]}\n",
+    "        split_positives.append(record)\n",
+    "\n",
+    "    split_positives = pd.DataFrame.from_dict(split_positives)\n",
+    "    split_negatives = make_random_pairs(split_positives)\n",
+    "    split_positives = split_positives[[\"pinder_id\", \"phylum_R\", \"phylum_L\"]]\n",
+    "    \n",
+    "    # Balancing the set\n",
+    "    split_positives = split_positives.sample(n=len(split_negatives))\n",
+    "\n",
+    "    # Labelling the set\n",
+    "    split_negatives['label'] = [0]*len(split_negatives)\n",
+    "    split_positives['label'] = [1]*len(split_positives)\n",
+    "\n",
+    "    # Summary of the split\n",
+    "    print(f\"{split}\\t0\\t{len(split_negatives)}\\n{split}\\t1\\t{len(split_positives)}\")\n",
+    "\n",
+    "    # Merging the classes\n",
+    "    split_all = pd.concat([split_positives, split_negatives])\n",
+    "    \n",
+    "    # Shuffling\n",
+    "    split_all = split_all.sample(frac=1).reset_index(drop=True)\n",
+    "\n",
+    "    # Saving\n",
+    "    split_all.to_csv(f\"{SPLITS_DIR}/{split}.csv\", index=False)"
    ]
   }
  ],
