Added the retrieval of UniProt annotations of the interacting partners and GO for molecular function. To be used to filter the negatives.

--- a/data_process/pinder_eubacteria.ipynb
+++ b/data_process/pinder_eubacteria.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 9,
    "id": "8e372a53-282c-4c38-b24b-e96982434ada",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
     "import random\n",
     "\n",
     "UNIPROT_IDS_PATH=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/uniprot_ids_1024_512.lst\"\n",
-    "UNIPROT_LINEAGES_PATH=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/uniprot_lineages_1024_512.tsv\"\n",
+    "UNIPROT_LINEAGES_PATH=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/uniprot_lineages_annotations_1024_512.tsv\"\n",
     "SPLITS_DIR=\"/scicore/home/schwede/pudziu0000/projects/gLM/data/PINDER/eubacteria_5_1024_512/\"\n",
     "SEED=42\n",
     "\n",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 2,
    "id": "de970895-ea39-4f2b-b294-80003d7d5ebe",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "PosixPath('/scicore/home/schwede/durair0000/.local/share/pinder/2024-02')"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 3,
    "id": "f007fc0d-da6f-4e71-bac5-7b8cface420c",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 4,
    "id": "f82601cf-96a0-48b5-a2c0-badaccf3e11f",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 5,
    "id": "7df3af2a-b115-4ec8-8950-247b1a3de70d",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 6,
    "id": "9ebdca60-6e15-4274-ae87-e8fdf22ef01a",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 7,
    "id": "073c00a5-62d8-4353-978b-2055d57b4dcd",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 18,
    "id": "67c3212f-9a63-4823-bfe3-2215349b46c0",
    "metadata": {},
    "outputs": [],
@@ -273,13 +273,27 @@
     "lineages = pd.read_csv(UNIPROT_LINEAGES_PATH, sep='\\t')\n",
     "\n",
     "eubacteria_phyla = {}\n",
+    "eubacteria_annotated_interactions = {}\n",
+    "eubacteria_GO = {}\n",
     "\n",
     "for index, row in lineages.iterrows():\n",
     "    if isinstance(row['Taxonomic lineage (Ids)'], str) and \"2 (superkingdom)\" in row['Taxonomic lineage (Ids)']: \n",
     "        match = re.search(r'(\\d+) \\(phylum\\)', row['Taxonomic lineage (Ids)'])\n",
     "        if match:\n",
     "            phylum_tax_id = match.group(1)\n",
-    "            eubacteria_phyla[row['From']] = phylum_tax_id"
+    "            eubacteria_phyla[row['From']] = phylum_tax_id\n",
+    "            \n",
+    "            # Retrieving UniProt IDs of the known interacting partners\n",
+    "            if(not pd.isna(row['Interacts with'])):\n",
+    "                eubacteria_annotated_interactions[row['From']] = [item.split('-')[0] for item in row['Interacts with'].split('; ')]\n",
+    "            else:\n",
+    "                eubacteria_annotated_interactions[row['From']] = []\n",
+    "            \n",
+    "            # Retrieving GO \n",
+    "            if(not pd.isna(row['Gene Ontology (molecular function)'])):\n",
+    "                eubacteria_GO[row['From']] = re.findall(r\"GO:\\d+\", row['Gene Ontology (molecular function)'])\n",
+    "            else:\n",
+    "                eubacteria_GO[row['From']] = []"
    ]
   },
   {
