In randomisation, added filtering to remove pairs made between UniProt entries that could have interacting sequences.

--- a/data_process/pinder_eubacteria.ipynb
+++ b/data_process/pinder_eubacteria.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "id": "8e372a53-282c-4c38-b24b-e96982434ada",
    "metadata": {},
    "outputs": [],
@@ -84,11 +84,13 @@
     "    )\n",
     "    return ids\n",
     "\n",
-    "def make_random_pairs(df, seed=SEED):    \n",
+    "def make_random_pairs(df, interacting_partners=None, seed=SEED):    \n",
     "    # Separate ids\n",
     "    df[['R', 'L']] = df['pinder_id'].str.split('--', expand=True)\n",
-    "    df[['pdb_R', 'chain_R']] = df['R'].str.split('__', expand=True)\n",
-    "    df[['pdb_L', 'chain_L']] = df['L'].str.split('__', expand=True)\n",
+    "    df[['pdb_R', 'chain_uniprot_R']] = df['R'].str.split('__', expand=True)\n",
+    "    df[['chain_R', 'uniprot_R']] = df['chain_uniprot_R'].str.split('_', expand=True)\n",
+    "    df[['pdb_L', 'chain_uniprot_L']] = df['L'].str.split('__', expand=True)\n",
+    "    df[['chain_L', 'uniprot_L']] = df['chain_uniprot_L'].str.split('_', expand=True)\n",
     "    \n",
     "    # Group by phylum\n",
     "    negative_ids = []\n",
@@ -101,14 +103,24 @@
     "        L = group['L'].tolist()\n",
     "        pdb_R = group['pdb_R'].tolist()\n",
     "        pdb_L = group['pdb_L'].tolist()\n",
-    "        chain_L = group['chain_L'].tolist()     \n",
+    "        chain_uniprot_L = group['chain_uniprot_L'].tolist()\n",
+    "        uniprot_R = group['uniprot_R'].tolist()\n",
+    "        uniprot_L = group['uniprot_L'].tolist()\n",
     "        \n",
     "        # Shuffle until no same PDB pairs\n",
     "        for _ in range(100):  # Limit reattempts\n",
-    "            L_info = list(zip(L, pdb_L, chain_L))\n",
+    "            L_info = list(zip(L, pdb_L, chain_uniprot_L, uniprot_L))\n",
     "            random.shuffle(L_info)\n",
-    "            L, pdb_L, chain_L = zip(*L_info)\n",
-    "            if all(p1 != p2 for p1, p2 in zip(pdb_R, pdb_L)): break\n",
+    "            L, pdb_L, chain_uniprot_L, uniprot_L = zip(*L_info)\n",
+    "\n",
+    "            # If the new pair is known to interact, remove\n",
+    "            if any(pL in interacting_partners[pR] for pL, pR in zip(uniprot_R, uniprot_L)):\n",
+    "                print(f\"{_}: Made interacting partners, reattempting\")\n",
+    "                continue\n",
+    "            \n",
+    "            if all(p1 != p2 for p1, p2 in zip(pdb_R, pdb_L)): \n",
+    "                print(f\"{_}: successful pairing of non-matching PDB_IDs\")\n",
+    "                break\n",
     "        \n",
     "        paired.extend(zip(R, L))\n",
     "        \n",
@@ -117,7 +129,7 @@
     "        \n",
     "        # If new pinder_id is present in the original set, remove that record\n",
     "        paired = [item for item in paired if item not in orig_pinder_ids]\n",
-    "\n",
+    "        \n",
     "        # Save \n",
     "        negative_ids.extend(paired)\n",
     "        negative_phyla.extend([phylum]*len(paired))\n",
@@ -131,6 +143,30 @@
     "    return negative_df\n",
     "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "96fb8ea4-ec99-4eea-bb18-8665bc706b13",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pL' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[43], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m negatives \u001b[38;5;241m=\u001b[39m make_random_pairs(split_positives, eubacteria_annotated_interactions)\n\u001b[1;32m      2\u001b[0m negatives\n",
+      "Cell \u001b[0;32mIn[42], line 109\u001b[0m, in \u001b[0;36mmake_random_pairs\u001b[0;34m(df, interacting_partners, seed)\u001b[0m\n\u001b[1;32m    107\u001b[0m \u001b[38;5;66;03m# If the new pair is known to interact, remove\u001b[39;00m\n\u001b[1;32m    108\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28many\u001b[39m(pL \u001b[38;5;129;01min\u001b[39;00m interacting_partners[pR] \u001b[38;5;28;01mfor\u001b[39;00m pL, pR \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(uniprot_R, uniprot_L)):\n\u001b[0;32m--> 109\u001b[0m     \u001b[38;5;28mprint\u001b[39m(pL, pR, interacting_partners[pR])\n\u001b[1;32m    110\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m_\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: Made interacting partners, reattempting\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    111\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pL' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "negatives = make_random_pairs(split_positives, eubacteria_annotated_interactions)\n",
+    "negatives"
    ]
   },
   {
@@ -298,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 21,
    "id": "284544b4-bae4-48a3-8087-f21504d0745b",
    "metadata": {},
    "outputs": [],
@@ -339,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 22,
    "id": "2c897770-537a-442b-96d9-7c13bfd4984d",
    "metadata": {},
    "outputs": [],
@@ -352,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 23,
    "id": "259f3538-e7e8-4fa2-907b-aaf46d39d17c",
    "metadata": {},
    "outputs": [
@@ -374,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 25,
    "id": "1ca0c57b-ee13-4952-87b9-bb0d5588273b",
    "metadata": {},
    "outputs": [
@@ -382,13 +418,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Split\tClass\tNumber of instances\n",
-      "train\t0\t8262\n",
-      "train\t1\t8262\n",
-      "val\t0\t901\n",
-      "val\t1\t901\n",
-      "test\t0\t878\n",
-      "test\t1\t878\n"
+      "Split\tClass\tNumber of instances\n"
      ]
     }
    ],
@@ -404,8 +434,9 @@
     "\n",
     "    split_positives = pd.DataFrame.from_dict(split_positives)\n",
     "    split_negatives = make_random_pairs(split_positives)\n",
+    "    \"\"\"\n",
     "    split_positives = split_positives[[\"pinder_id\", \"phylum_R\", \"phylum_L\"]]\n",
-    "    \n",
+    "\n",
     "    # Balancing the set\n",
     "    split_positives = split_positives.sample(n=len(split_negatives))\n",
     "\n",
@@ -423,7 +454,8 @@
     "    split_all = split_all.sample(frac=1).reset_index(drop=True)\n",
     "\n",
     "    # Saving\n",
-    "    split_all.to_csv(f\"{SPLITS_DIR}/{split}.csv\", index=False)"
+    "    split_all.to_csv(f\"{SPLITS_DIR}/{split}.csv\", index=False)\n",
+    "    \"\"\""
    ]
   }
  ],
