--- a/data_process/pinder_eubacteria.ipynb
+++ b/data_process/pinder_eubacteria.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 208,
    "id": "8e372a53-282c-4c38-b24b-e96982434ada",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,59 @@
     "    )\n",
     "    return ids\n",
     "\n",
-    "def make_random_pairs(df, interacting_partners=None, seed=SEED):    \n",
+    "def make_random_pairs(L, pdb_L, chain_uniprot_L, uniprot_L, \n",
+    "                      pdb_R, uniprot_R,\n",
+    "                      interacting_partners, GO, max_num_attempts):\n",
+    "    invalidity_flags = []\n",
+    "    # Shuffle until no same PDB pairs\n",
+    "    for attempt in range(max_num_attempts):  # Limit reattempts\n",
+    "        L_info = list(zip(L, pdb_L, chain_uniprot_L, uniprot_L))\n",
+    "        random.shuffle(L_info)\n",
+    "        L, pdb_L, chain_uniprot_L, uniprot_L = zip(*L_info)\n",
+    "        \n",
+    "        # If UniProt IDs of the new pair are known to contain interacting sequences, retry\n",
+    "        if any(uL in interacting_partners[uR] for uR, uL in zip(uniprot_R, uniprot_L)):\n",
+    "            if(attempt != max_num_attempts-1):\n",
+    "                continue\n",
+    "            else:\n",
+    "                invalidity_flags.append(\"interacting\")\n",
+    "                \n",
+    "        # If UniProt IDs of the new pair have overlapping Molecular Function GOs, retry\n",
+    "        if any(bool(set(GO[uR]) & set(GO[uL])) for uR, uL in zip(uniprot_R, uniprot_L)):\n",
+    "            if(attempt != max_num_attempts-1):\n",
+    "                continue\n",
+    "            else:\n",
+    "                invalidity_flags.append(\"GO\")\n",
+    "\n",
+    "        # If PDB IDs of all pairs are non-matching, call it a success\n",
+    "        if all(pR != pL for pR, pL in zip(pdb_R, pdb_L)): break\n",
+    "\n",
+    "    return L, pdb_L, chain_uniprot_L, uniprot_L, invalidity_flags\n",
+    "\n",
+    "\n",
+    "def remove_false_negatives(R, L, uniprot_R, uniprot_L, interacting_partners, \n",
+    "                           GO, invalidity_flags, orig_pinder_ids):\n",
+    "    # If there are invalid pairings, execute removals\n",
+    "    if(invalidity_flags):\n",
+    "        to_remove = set()\n",
+    "        for i, (uR, uL) in enumerate(zip(uniprot_R, uniprot_L)):\n",
+    "            if \"interacting\" in invalidity_flags and uL in interacting_partners[uR]: to_remove.add(i)\n",
+    "            if \"GO\" in invalidity_flags and bool(set(GO[uR]) & set(GO[uL])): to_remove.add(i)\n",
+    "        \n",
+    "        valid_indices = set(range(len(R)))-to_remove\n",
+    "        R = [R[i] for i in valid_indices]\n",
+    "        L = [L[i] for i in valid_indices]\n",
+    "    \n",
+    "    # Forming new pinder_ids\n",
+    "    paired = zip(R, L)\n",
+    "    paired = [\"--\".join(pair) for pair in paired]\n",
+    "    \n",
+    "    # If new pinder_id is present in the original set, remove that record\n",
+    "    paired = [item for item in paired if item not in orig_pinder_ids]\n",
+    "\n",
+    "    return paired\n",
+    "\n",
+    "def make_negative_pairs(df, interacting_partners, GO, seed=SEED, max_num_attempts=100):    \n",
     "    # Separate ids\n",
     "    df[['R', 'L']] = df['pinder_id'].str.split('--', expand=True)\n",
     "    df[['pdb_R', 'chain_uniprot_R']] = df['R'].str.split('__', expand=True)\n",
@@ -98,7 +150,7 @@
     "    orig_pinder_ids = set(df['pinder_id'])\n",
     "    \n",
     "    for phylum, group in df.groupby('phylum_R'):\n",
-    "        paired = []\n",
+    "        \n",
     "        R = group['R'].tolist()\n",
     "        L = group['L'].tolist()\n",
     "        pdb_R = group['pdb_R'].tolist()\n",
@@ -106,31 +158,17 @@
     "        chain_uniprot_L = group['chain_uniprot_L'].tolist()\n",
     "        uniprot_R = group['uniprot_R'].tolist()\n",
     "        uniprot_L = group['uniprot_L'].tolist()\n",
-    "        \n",
-    "        # Shuffle until no same PDB pairs\n",
-    "        for _ in range(100):  # Limit reattempts\n",
-    "            L_info = list(zip(L, pdb_L, chain_uniprot_L, uniprot_L))\n",
-    "            random.shuffle(L_info)\n",
-    "            L, pdb_L, chain_uniprot_L, uniprot_L = zip(*L_info)\n",
     "\n",
-    "            # If the new pair is known to interact, remove\n",
-    "            if any(pL in interacting_partners[pR] for pL, pR in zip(uniprot_R, uniprot_L)):\n",
-    "                print(f\"{_}: Made interacting partners, reattempting\")\n",
-    "                continue\n",
-    "            \n",
-    "            if all(p1 != p2 for p1, p2 in zip(pdb_R, pdb_L)): \n",
-    "                print(f\"{_}: successful pairing of non-matching PDB_IDs\")\n",
-    "                break\n",
+    "        L, pdb_L, chain_uniprot_L, uniprot_L, invalidity_flags = make_random_pairs(\n",
+    "            L, pdb_L, chain_uniprot_L, uniprot_L, pdb_R, uniprot_R, \n",
+    "            interacting_partners, GO, max_num_attempts\n",
+    "        )\n",
     "        \n",
-    "        paired.extend(zip(R, L))\n",
-    "        \n",
-    "        # Forming new pinder_ids\n",
-    "        paired = [\"--\".join(pair) for pair in paired]\n",
-    "        \n",
-    "        # If new pinder_id is present in the original set, remove that record\n",
-    "        paired = [item for item in paired if item not in orig_pinder_ids]\n",
-    "        \n",
-    "        # Save \n",
+    "        # If there are invalid pairings, execute removals and get pairs\n",
+    "        paired = remove_false_negatives(R, L, uniprot_R, uniprot_L, \n",
+    "            interacting_partners, GO, invalidity_flags, orig_pinder_ids\n",
+    "        )\n",
+    "\n",
     "        negative_ids.extend(paired)\n",
     "        negative_phyla.extend([phylum]*len(paired))\n",
     "\n",
@@ -147,31 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "96fb8ea4-ec99-4eea-bb18-8665bc706b13",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pL' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[43], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m negatives \u001b[38;5;241m=\u001b[39m make_random_pairs(split_positives, eubacteria_annotated_interactions)\n\u001b[1;32m      2\u001b[0m negatives\n",
-      "Cell \u001b[0;32mIn[42], line 109\u001b[0m, in \u001b[0;36mmake_random_pairs\u001b[0;34m(df, interacting_partners, seed)\u001b[0m\n\u001b[1;32m    107\u001b[0m \u001b[38;5;66;03m# If the new pair is known to interact, remove\u001b[39;00m\n\u001b[1;32m    108\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28many\u001b[39m(pL \u001b[38;5;129;01min\u001b[39;00m interacting_partners[pR] \u001b[38;5;28;01mfor\u001b[39;00m pL, pR \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(uniprot_R, uniprot_L)):\n\u001b[0;32m--> 109\u001b[0m     \u001b[38;5;28mprint\u001b[39m(pL, pR, interacting_partners[pR])\n\u001b[1;32m    110\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m_\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: Made interacting partners, reattempting\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    111\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pL' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "negatives = make_random_pairs(split_positives, eubacteria_annotated_interactions)\n",
-    "negatives"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 209,
    "id": "de970895-ea39-4f2b-b294-80003d7d5ebe",
    "metadata": {},
    "outputs": [
@@ -181,7 +195,7 @@
        "PosixPath('/scicore/home/schwede/durair0000/.local/share/pinder/2024-02')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 210,
    "id": "f007fc0d-da6f-4e71-bac5-7b8cface420c",
    "metadata": {},
    "outputs": [],
@@ -203,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 211,
    "id": "f82601cf-96a0-48b5-a2c0-badaccf3e11f",
    "metadata": {},
    "outputs": [
@@ -231,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 212,
    "id": "7df3af2a-b115-4ec8-8950-247b1a3de70d",
    "metadata": {},
    "outputs": [],
@@ -248,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 213,
    "id": "9ebdca60-6e15-4274-ae87-e8fdf22ef01a",
    "metadata": {},
    "outputs": [
@@ -276,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 214,
    "id": "073c00a5-62d8-4353-978b-2055d57b4dcd",
    "metadata": {},
    "outputs": [],
@@ -290,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 215,
    "id": "b0b7f998-e9ce-4018-9eed-9e1ebd5bd706",
    "metadata": {},
    "outputs": [],
@@ -300,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 216,
    "id": "67c3212f-9a63-4823-bfe3-2215349b46c0",
    "metadata": {},
    "outputs": [],
@@ -334,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 217,
    "id": "284544b4-bae4-48a3-8087-f21504d0745b",
    "metadata": {},
    "outputs": [],
@@ -354,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 218,
    "id": "0bf36719-20e2-4059-941f-e34aa313d12b",
    "metadata": {},
    "outputs": [
@@ -375,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 219,
    "id": "2c897770-537a-442b-96d9-7c13bfd4984d",
    "metadata": {},
    "outputs": [],
@@ -388,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 220,
    "id": "259f3538-e7e8-4fa2-907b-aaf46d39d17c",
    "metadata": {},
    "outputs": [
@@ -410,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 221,
    "id": "1ca0c57b-ee13-4952-87b9-bb0d5588273b",
    "metadata": {},
    "outputs": [
@@ -418,7 +432,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Split\tClass\tNumber of instances\n"
+      "Split\tClass\tNumber of instances\n",
+      "train\t0\t7679\n",
+      "train\t1\t7679\n",
+      "val\t0\t833\n",
+      "val\t1\t833\n",
+      "test\t0\t823\n",
+      "test\t1\t823\n"
      ]
     }
    ],
@@ -433,8 +453,7 @@
     "        split_positives.append(record)\n",
     "\n",
     "    split_positives = pd.DataFrame.from_dict(split_positives)\n",
-    "    split_negatives = make_random_pairs(split_positives)\n",
-    "    \"\"\"\n",
+    "    split_negatives = make_negative_pairs(split_positives, eubacteria_annotated_interactions, eubacteria_GO)\n",
     "    split_positives = split_positives[[\"pinder_id\", \"phylum_R\", \"phylum_L\"]]\n",
     "\n",
     "    # Balancing the set\n",
@@ -454,9 +473,16 @@
     "    split_all = split_all.sample(frac=1).reset_index(drop=True)\n",
     "\n",
     "    # Saving\n",
-    "    split_all.to_csv(f\"{SPLITS_DIR}/{split}.csv\", index=False)\n",
-    "    \"\"\""
+    "    split_all.to_csv(f\"{SPLITS_DIR}/{split}.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d194d35f-bfb8-46ab-af28-b97965a24749",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
