Added renaming of the columns, saving to TSV file rather than CSV. Concatenating all FASTA files into a single sequences.fasta. Found out that I get different train.txt files after running at different times - has to be debugged.

--- a/data_process/pinder_eubacteria.ipynb
+++ b/data_process/pinder_eubacteria.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 3,
    "id": "8e372a53-282c-4c38-b24b-e96982434ada",
    "metadata": {},
    "outputs": [],
@@ -182,19 +182,26 @@
     "    ).sample(frac=1, random_state=seed).reset_index(drop=True)\n",
     "    \n",
     "    negative_df[['pinder_id_R', 'pinder_id_L']] = negative_df['pinder_id'].str.split('--', expand=True)\n",
-    "    negative_df.drop(['pinder_id'], axis=1, inplace=True)\n",
     "    \n",
     "    return negative_df\n",
     "\n",
+    "def rename_columns(df, to_drop=None):\n",
+    "    df.rename(columns={\n",
+    "        \"pinder_id_R\": \"protein1\",\n",
+    "        \"pinder_id_L\": \"protein2\",\n",
+    "        \"phylum_R\": \"phylum1\",\n",
+    "        \"phylum_L\": \"phylum2\"\n",
+    "    }, inplace=True)\n",
+    "    if(to_drop): df.drop([to_drop], axis=1, inplace=True)\n",
+    "    return df\n",
+    "\n",
     "def make_split_fasta(split):\n",
-    "    df = pd.read_csv(f\"{SPLITS_DIR}/{split}.csv\")\n",
+    "    df = pd.read_csv(f\"{SPLITS_DIR}/{split}_.txt\")\n",
     "\n",
     "    fasta = []\n",
     "    for i, j in df.iterrows():\n",
-    "        #idR = df[\"pinder_id\"][i].split(\"--\")[0]\n",
-    "        #idL = df[\"pinder_id\"][i].split(\"--\")[1]\n",
-    "        idR = df[\"pinder_id_R\"][i]\n",
-    "        idL = df[\"pinder_id_L\"][i]\n",
+    "        idR = df[\"protein1\"][i]\n",
+    "        idL = df[\"protein2\"][i]\n",
     "            \n",
     "        structR = structure.Structure(f\"{PINDER_BASE_DIR}/pinder/2024-02/pdbs/{idR}-R.pdb\", pinder_id=idR)\n",
     "        structL = structure.Structure(f\"{PINDER_BASE_DIR}/pinder/2024-02/pdbs/{idL}-L.pdb\", pinder_id=idL)\n",
@@ -209,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 14,
    "id": "de970895-ea39-4f2b-b294-80003d7d5ebe",
    "metadata": {},
    "outputs": [
@@ -219,7 +226,7 @@
        "PosixPath('/scicore/home/schwede/durair0000/.local/share/pinder/2024-02')"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 15,
    "id": "f007fc0d-da6f-4e71-bac5-7b8cface420c",
    "metadata": {},
    "outputs": [],
@@ -241,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 16,
    "id": "f82601cf-96a0-48b5-a2c0-badaccf3e11f",
    "metadata": {},
    "outputs": [
@@ -269,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 17,
    "id": "7df3af2a-b115-4ec8-8950-247b1a3de70d",
    "metadata": {},
    "outputs": [],
@@ -286,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 18,
    "id": "9ebdca60-6e15-4274-ae87-e8fdf22ef01a",
    "metadata": {},
    "outputs": [
@@ -314,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 19,
    "id": "073c00a5-62d8-4353-978b-2055d57b4dcd",
    "metadata": {},
    "outputs": [],
@@ -328,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 20,
    "id": "b0b7f998-e9ce-4018-9eed-9e1ebd5bd706",
    "metadata": {},
    "outputs": [],
@@ -338,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 21,
    "id": "67c3212f-9a63-4823-bfe3-2215349b46c0",
    "metadata": {},
    "outputs": [],
@@ -372,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 22,
    "id": "284544b4-bae4-48a3-8087-f21504d0745b",
    "metadata": {},
    "outputs": [],
@@ -392,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 23,
    "id": "0bf36719-20e2-4059-941f-e34aa313d12b",
    "metadata": {},
    "outputs": [
@@ -413,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 24,
    "id": "2c897770-537a-442b-96d9-7c13bfd4984d",
    "metadata": {},
    "outputs": [],
@@ -426,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 25,
    "id": "259f3538-e7e8-4fa2-907b-aaf46d39d17c",
    "metadata": {},
    "outputs": [
@@ -448,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 26,
    "id": "1ca0c57b-ee13-4952-87b9-bb0d5588273b",
    "metadata": {},
    "outputs": [
@@ -457,8 +464,8 @@
      "output_type": "stream",
      "text": [
       "Split\tClass\tNumber of instances\n",
-      "train\t0\t7556\n",
-      "train\t1\t7556\n",
+      "train\t0\t7533\n",
+      "train\t1\t7533\n",
       "val\t0\t792\n",
       "val\t1\t792\n",
       "test\t0\t790\n",
@@ -486,6 +493,9 @@
     "    split_negatives = make_negative_pairs(split_positives, eubacteria_annotated_interactions, eubacteria_GO)\n",
     "    split_positives = split_positives[[\"pinder_id_R\", \"pinder_id_L\", \"phylum_R\", \"phylum_L\"]]\n",
     "\n",
+    "    split_positives = rename_columns(split_positives)\n",
+    "    split_negatives = rename_columns(split_negatives, to_drop=\"pinder_id\")\n",
+    "    \n",
     "    # Balancing the set\n",
     "    split_positives = split_positives.sample(n=len(split_negatives), random_state=SEED)\n",
     "\n",
@@ -501,20 +511,48 @@
     "    \n",
     "    # Shuffling\n",
     "    split_all = split_all.sample(frac=1, random_state=SEED).reset_index(drop=True)\n",
-    "\n",
+    "    \n",
     "    # Saving\n",
-    "    split_all.to_csv(f\"{SPLITS_DIR}/{split}.csv\", index=False)\n",
+    "    split_all.to_csv(f\"{SPLITS_DIR}/{split}_.txt\", sep=\"\\t\", index=False)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 29,
+   "id": "954fc1ce-65d4-4820-a616-e978893b91c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30177\n"
+     ]
+    }
+   ],
+   "source": [
+    "!diff $SPLITS_DIR/train_.txt $SPLITS_DIR/train.txt | wc -l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4ecb63c4-1e90-4162-afd4-b8d6a2f1882b",
    "metadata": {},
    "outputs": [],
    "source": [
     "for split in [\"train\", \"val\", \"test\"]: make_split_fasta(split)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e9984fba-c401-435b-a835-36a64fa2e921",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cat $SPLITS_DIR/train.fasta $SPLITS_DIR/val.fasta $SPLITS_DIR/test.fasta > $SPLITS_DIR/sequences.fasta"
    ]
   }
  ],
