Updated the data retrieval notebook, removed an outdated and added updated Bernett2022 configs.

--- a/data_process/pinder_eubacteria.ipynb
+++ b/data_process/pinder_eubacteria.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 70,
    "id": "8e372a53-282c-4c38-b24b-e96982434ada",
    "metadata": {},
    "outputs": [],
@@ -196,18 +196,21 @@
     "    return df\n",
     "\n",
     "def make_split_fasta(split):\n",
-    "    df = pd.read_csv(f\"{SPLITS_DIR}/{split}_.txt\")\n",
+    "    df = pd.read_csv(f\"{SPLITS_DIR}/{split}.txt\", sep=\"\\t\")\n",
     "\n",
     "    fasta = []\n",
+    "    # Reducing duplicates\n",
+    "    ids = {\"R\": set(), \"L\": set()}\n",
     "    for i, j in df.iterrows():\n",
     "        idR = df[\"protein1\"][i]\n",
     "        idL = df[\"protein2\"][i]\n",
-    "            \n",
-    "        structR = structure.Structure(f\"{PINDER_BASE_DIR}/pinder/2024-02/pdbs/{idR}-R.pdb\", pinder_id=idR)\n",
-    "        structL = structure.Structure(f\"{PINDER_BASE_DIR}/pinder/2024-02/pdbs/{idL}-L.pdb\", pinder_id=idL)\n",
+    "        ids[\"R\"].add(idR)\n",
+    "        ids[\"L\"].add(idL)\n",
     "\n",
-    "        fasta.append(SeqRecord(Seq(structR.sequence), id=idR, description=\"\"))\n",
-    "        fasta.append(SeqRecord(Seq(structL.sequence), id=idL, description=\"\"))\n",
+    "    for k in ids:\n",
+    "        for id_ in ids[k]:\n",
+    "            struct = structure.Structure(f\"{PINDER_BASE_DIR}/pinder/2024-02/pdbs/{id_}-{k}.pdb\", pinder_id=id_)\n",
+    "            fasta.append(SeqRecord(Seq(struct.sequence), id=id_, description=\"\"))\n",
     "    \n",
     "    with open(f\"{SPLITS_DIR}/{split}.fasta\", \"w\") as output_handle:\n",
     "        SeqIO.write(fasta, output_handle, \"fasta-2line\")\n",
@@ -216,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "id": "de970895-ea39-4f2b-b294-80003d7d5ebe",
    "metadata": {},
    "outputs": [
@@ -226,7 +229,7 @@
        "PosixPath('/scicore/home/schwede/durair0000/.local/share/pinder/2024-02')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "id": "f007fc0d-da6f-4e71-bac5-7b8cface420c",
    "metadata": {},
    "outputs": [],
@@ -248,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "id": "f82601cf-96a0-48b5-a2c0-badaccf3e11f",
    "metadata": {},
    "outputs": [
@@ -276,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "id": "7df3af2a-b115-4ec8-8950-247b1a3de70d",
    "metadata": {},
    "outputs": [],
@@ -293,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "id": "9ebdca60-6e15-4274-ae87-e8fdf22ef01a",
    "metadata": {},
    "outputs": [
@@ -321,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "id": "073c00a5-62d8-4353-978b-2055d57b4dcd",
    "metadata": {},
    "outputs": [],
@@ -335,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "id": "b0b7f998-e9ce-4018-9eed-9e1ebd5bd706",
    "metadata": {},
    "outputs": [],
@@ -345,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "id": "67c3212f-9a63-4823-bfe3-2215349b46c0",
    "metadata": {},
    "outputs": [],
@@ -379,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "id": "284544b4-bae4-48a3-8087-f21504d0745b",
    "metadata": {},
    "outputs": [],
@@ -399,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "id": "0bf36719-20e2-4059-941f-e34aa313d12b",
    "metadata": {},
    "outputs": [
@@ -420,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "id": "2c897770-537a-442b-96d9-7c13bfd4984d",
    "metadata": {},
    "outputs": [],
@@ -433,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "id": "259f3538-e7e8-4fa2-907b-aaf46d39d17c",
    "metadata": {},
    "outputs": [
@@ -455,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 48,
    "id": "1ca0c57b-ee13-4952-87b9-bb0d5588273b",
    "metadata": {},
    "outputs": [
@@ -513,31 +516,13 @@
     "    split_all = split_all.sample(frac=1, random_state=SEED).reset_index(drop=True)\n",
     "    \n",
     "    # Saving\n",
-    "    split_all.to_csv(f\"{SPLITS_DIR}/{split}_.txt\", sep=\"\\t\", index=False)\n",
+    "    split_all.to_csv(f\"{SPLITS_DIR}/{split}.txt\", sep=\"\\t\", index=False)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "954fc1ce-65d4-4820-a616-e978893b91c0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30177\n"
-     ]
-    }
-   ],
-   "source": [
-    "!diff $SPLITS_DIR/train_.txt $SPLITS_DIR/train.txt | wc -l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "4ecb63c4-1e90-4162-afd4-b8d6a2f1882b",
    "metadata": {},
    "outputs": [],
@@ -547,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 79,
    "id": "e9984fba-c401-435b-a835-36a64fa2e921",
    "metadata": {},
    "outputs": [],
